# video_anonymization

./: .gitignore  README.md  pyproject.toml
dataFrame/: tempi_inpainting_custom_optimized_3.csv
sd/: demo.ipynb  demo_inpainting.ipynb  demo_inpainting_optimazed.py  demo_inpainting_optimized.ipynb  demo_inpainting_tot.ipynb  model_loader.py  pipeline.py  pipeline_optimized.py
